--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="fragment_login_password">Password</string>
     <string name="fragment_button_login">Login</string>
     <string name="fragment_button_signup">Sign up</string>
-    <string name="example_wolox_phone">By joining you agree to our Terms &amp; Conditions</string>
+    <string name="example_wolox_phone">By joining you agree to our <u>Terms &amp; Conditions</u></string>
 
 </resources>
