Login API implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="textHome">Home Page</string>
 
     <string name="successful_login">Successful login.</string>
+    <string name="request_error_login">Invalid login credentials. Please try again.</string>
+    <string name="default_error">Whoops something went wrong.</string>
 
 </resources>
